[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "micronsclient"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Casey Schneider-Mizell", email = "caseysm@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "datasetspecificcaveclient @ file:///Users/caseysm/Work/Code/DatasetSpecificCaveClient",
  "standard-transform",
]

[project.urls]
Documentation = "https://github.com/Casey Schneider-Mizell/micronsclient#readme"
Issues = "https://github.com/Casey Schneider-Mizell/micronsclient/issues"
Source = "https://github.com/Casey Schneider-Mizell/micronsclient"

[tool.hatch.version]
path = "src/micronsclient/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/micronsclient tests}"

[tool.coverage.run]
source_pkgs = ["micronsclient", "tests"]
branch = true
parallel = true
omit = [
  "src/micronsclient/__about__.py",
]

[tool.coverage.paths]
micronsclient = ["src/micronsclient", "*/micronsclient/src/micronsclient"]
tests = ["tests", "*/micronsclient/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
